tests/codegen/fail/subscription/name_double_underscored.stderr
error: All types and directives defined within a schema must not have a name which begins with `__` (two underscores), as this is used exclusively by GraphQL’s introspection system.
  --> fail/subscription/name_double_underscored.rs:10:6
   |
10 | impl __Obj {
   |      ^^^^^
   |
   = note: https://spec.graphql.org/October2021#sec-Schema
